[package]
name = "tiler_derive"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
proc-macro2 = "1.0.4"
rusttype = "0.8.0"
mint = "0.5.2"
nom = "5.0.1"

[dependencies.syn]
version = "1.0.5"
features = ["extra-traits"]
